# del

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: argsparser.cpp.CF196B0CF0A00349.idx  argsparser.hpp.2888A245669836CA.idx  consolewriter.cpp.71784A859B6F06CE.idx  consolewriter.hpp.B0D8588AF2139AE0.idx  constans.hpp.96204505D20B8502.idx  fileremoval.cpp.89D1138A6FA848CA.idx  fileremoval.hpp.38C71D47F3771AB2.idx  lpct.hpp.53902E83B0E0F6B0.idx  main.cpp.6FBA960957BA4251.idx
inc/: argsparser.hpp  consolewriter.hpp  constans.hpp  fileremoval.hpp
src/: consolewriter.cpp  main.c  main.cpp
